--- a/index.html
+++ b/index.html
@@ -247,7 +247,14 @@
       <button class="error__button">Попробовать снова</button>
     </div>
   </template>
-  <script src="js/main.js"></script>
+
+  <script src="js/random.js"></script>
+  <script src="js/util.js"></script>
+  <script src="js/pins.js"></script>
+  <script src="js/data.js"></script>
+  <script src="js/cards.js"></script>
+  <script src="js/form.js"></script>
+  <script src="js/activation.js"></script>
 
 </body>
 </html>
