--- a/index.html
+++ b/index.html
@@ -250,11 +250,12 @@
 
   <script src="js/random.js"></script>
   <script src="js/util.js"></script>
-  <script src="js/pins.js"></script>
   <script src="js/data.js"></script>
-  <script src="js/cards.js"></script>
+  <script src="js/pin.js"></script>
+  <script src="js/card.js"></script>
+  <script src="js/map.js"></script>
   <script src="js/form.js"></script>
+  <script src="js/main-pin.js"></script>
   <script src="js/activation.js"></script>
-
 </body>
 </html>
