--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
 
   <script src="js/random.js"></script>
   <script src="js/util.js"></script>
+  <script src="js/upload.js"></script>
   <script src="js/data.js"></script>
   <script src="js/pin.js"></script>
   <script src="js/card.js"></script>
