--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
       <div class="map__filters-container">
         <form action="#" class="map__filters" autocomplete="off">
           <select name="housing-type" id="housing-type" class="map__filter">
-            <option value="any" selected>Любой тип жилья</option>
+            <option value="any">Любой тип жилья</option>
             <option value="palace">Дворец</option>
-            <option value="flat">Квартира</option>
+            <option value="flat" selected>Квартира</option>
             <option value="house">Дом</option>
             <option value="bungalo">Бунгало</option>
           </select>
@@ -253,6 +253,7 @@
   <script src="js/dialog.js"></script>
   <script src="js/load-util.js"></script>
   <script src="js/data.js"></script>
+  <script src="js/filter.js"></script>
   <script src="js/pin.js"></script>
   <script src="js/card.js"></script>
   <script src="js/map.js"></script>
