--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </fieldset>
         <fieldset class="ad-form__element">
           <label class="ad-form__label" for="price">Цена за ночь, руб.</label>
-          <input id="price" name="price" type="number" min="0" placeholder="5000" required>
+          <input id="price" name="price" type="number" min="0" max="1000000" placeholder="5000" required>
         </fieldset>
         <fieldset class="ad-form__element ad-form__element--time">
           <label class="ad-form__label" for="timein">Время заезда и выезда</label>
@@ -253,12 +253,12 @@
   <script src="js/filter.js"></script>
   <script src="js/data.js"></script>
   <script src="js/debounce.js"></script>
-  <script src="js/card.js"></script>
   <script src="js/form.js"></script>
   <script src="js/pin.js"></script>
   <script src="js/main-pin.js"></script>
   <script src="js/drag.js"></script>
   <script src="js/map.js"></script>
+  <script src="js/card.js"></script>
   <script src="js/upload.js"></script>
   <script src="js/page.js"></script>
 </body>
